--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Umesh's webapp.
+            I am stduying in MNIT.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
